[gd_scene load_steps=4 format=3 uid="uid://n4jgo8ducj5y"]

[ext_resource type="Script" path="res://shared/components/melee_attack_component/melee_attack_component.gd" id="1_sxpxg"]
[ext_resource type="PackedScene" uid="uid://cumblegcognst" path="res://shared/components/damage_deal_component/damage_deal_component.tscn" id="2_lvpr8"]
[ext_resource type="PackedScene" uid="uid://b1l6j3mk2joqe" path="res://shared/components/aiming_components/aiming_component.tscn" id="3_fllcr"]

[node name="MeleeAttackComponent" type="Node2D" node_paths=PackedStringArray("damage_deal_component")]
script = ExtResource("1_sxpxg")
damage_deal_component = NodePath("DamageDealComponent")

[node name="DamageDealComponent" parent="." instance=ExtResource("2_lvpr8")]

[node name="AimingComponent" parent="." instance=ExtResource("3_fllcr")]
targeting_mode = 1
enemy_group = "turrets"
